<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="246dp"
        android:layout_marginLeft="32sp"
        android:layout_marginRight="32sp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32sp"
        android:layout_marginRight="32sp"
        android:background="@color/boton"
        android:text="@string/jugar"
        android:textColor="@color/texto_boton"
        android:textSize="32sp" />

    <Button
        android:id="@+id/btnConfigurar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32sp"
        android:layout_marginTop="24sp"
        android:layout_marginRight="32sp"
        android:background="@color/boton"
        android:text="@string/configurar"
        android:textColor="@color/texto_boton"
        android:textSize="32sp" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32sp"
        android:layout_marginTop="24sp"
        android:layout_marginRight="32sp"
        android:background="@color/boton"
        android:text="@string/salir"
        android:textColor="@color/texto_boton"
        android:textSize="32sp" />
</LinearLayout>