<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    android:orientation="vertical"
    tools:context=".ConfigurarActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:src="@drawable/logo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="18sp"
                android:text="@string/configuracion"
                android:textColor="@color/texto_boton"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="18sp"
                android:paddingTop="4sp"
                android:paddingRight="19sp"
                android:paddingBottom="4sp">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tiempo_partida"
                    android:textColor="@color/texto"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edDuracionPartida"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/texto"
                    android:ems="10"
                    android:inputType="number"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:padding="4sp"
                    android:text="@string/bola"
                    android:textColor="@color/texto"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="18sp"
                android:paddingTop="4sp"
                android:paddingRight="19sp"
                android:paddingBottom="4sp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/velocidad_bola"
                    android:textColor="@color/texto"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edVelocidadBola"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/texto"
                    android:ems="10"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:padding="4sp"
                    android:text="@string/bloques"
                    android:textColor="@color/texto"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="18sp"
                android:paddingTop="4sp"
                android:paddingRight="19sp"
                android:paddingBottom="4sp">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/num_ancho"
                    android:textColor="@color/texto"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edNumBloquesAncho"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/texto"
                    android:ems="10"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="18sp"
                android:paddingTop="4sp"
                android:paddingRight="19sp"
                android:paddingBottom="4sp">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/num_alto"
                    android:textColor="@color/texto"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edNumBloquesAlto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/texto"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8sp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:padding="4sp"
                    android:text="@string/vaus"
                    android:textColor="@color/texto"
                    android:textSize="24sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="18sp"
                android:paddingTop="4sp"
                android:paddingRight="19sp"
                android:paddingBottom="4sp">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/velocidad"
                    android:textColor="@color/texto"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edVelocidadVaus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/texto"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="18sp"
                android:paddingTop="4sp"
                android:paddingRight="19sp"
                android:paddingBottom="4sp">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/tamanio"
                    android:textColor="@color/texto"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/edTamanioVaus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:background="@color/texto"
                    android:ems="10"
                    android:inputType="number"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="24sp"
                android:paddingTop="12sp"
                android:paddingRight="24sp"
                android:paddingBottom="8sp">

                <Button
                    android:id="@+id/btnRestablecer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12sp"
                    android:layout_weight="1"
                    android:background="@color/boton"
                    android:onClick="onClickRestablecer"
                    android:text="@string/restablecer"
                    android:textColor="@color/texto_boton" />

                <Button
                    android:id="@+id/btnGuardar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="12sp"
                    android:layout_weight="1"
                    android:background="@color/boton"
                    android:onClick="onClickGuardar"
                    android:text="@string/guardar"
                    android:textColor="@color/texto_boton" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>